Fix: Resolve 'Cannot resolve symbol OpenAiService' issue
- Ensure correct dependencies for theokanning OpenAI Java client in `pom.xml`
- Verify import and usage of `OpenAiService` class
- Clean and rebuild the project to resolve any cache

Took 39 minutes